--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.18"
+    "mongoose": "^5.11.18",
+    "multer": "^1.4.2",
+    "node-xlsx": "^0.16.1"
   }
 }
