--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.21.1",
     "express": "^4.17.1",
     "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
     "multer": "^1.4.2",
-    "node-xlsx": "^0.16.1"
+    "node-xlsx": "^0.16.1",
+    "pizzip": "^3.0.6"
   }
 }
